# email-triage-env

./: .gitignore  Dockerfile  README.md  app_fixed.py  env_final.py  inference.py  inference_correct.py  pyproject_fixed.toml  req_fixed.txt  server_app_fixed.py
email_triage_env/: README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
email_triage_env/server/: app.py  environment.py  requirements.txt
