[project]
name = "email-triage-env"
version = "1.0.0"
description = "OpenEnv email triage RL environment"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "openenv-core",
    "openai",
    "python-multipart",
]

[project.urls]
Homepage = "https://huggingface.co/spaces/mhk-s/email-triage-env"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:BuildBackend"
