[project]
name = "email-triage-env"
version = "1.0.0"
description = "OpenEnv email triage RL environment"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "openenv-core",
    "openai",
    "python-multipart",
]

[project.scripts]
server = "app:app"

[project.urls]
Homepage = "https://huggingface.co/spaces/mhk-s/email-triage-env"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:BuildBackend"
